@@ -54,7 +54,10 @@
   actual primary key in "someinstance".
   - some deeper error checking when compiling relations, to detect an ambiguous "primaryjoin"
   in the case that both sides of the relationship have foreign key references in the primary
-  join condition
+  join condition.  also tightened down conditions used to locate "relation direction", associating
+  the "foreignkey" of the relationship with the "primaryjoin"
+  - a little bit of improvement to the concept of a "concrete" inheritance mapping, though that concept
+  is not well fleshed out yet (added test case to support concrete mappers on top of a polymorphic base).
   - fix to "proxy=True" behavior on synonym()
   - fixed bug where delete-orphan basically didn't work with many-to-many relationships [ticket:427],
   backref presence generally hid the symptom
